--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ dtsa2/index.html
 .Rproj.user
 .Rhistory
 
+jrm-r-pkgs/tikzDevice/src/symbols.rds
+jrm-r-pkgs/tikzDevice/src/tikzDevice.dll
+jrm-r-pkgs/tikzDevice/src/tikzDevice.so
+jrm-r-pkgs/tikzDevice/src/tikzDevice.o
