--- a/jrm-r-pkgs/jrmmisc/DESCRIPTION
+++ b/jrm-r-pkgs/jrmmisc/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: jrmmisc
 Type: Package
 Title: John Minter's miscellaneous functions
-Version: 1.0.3
-Date: 2013-08-13
+Version: 1.0.4
+Date: 2013-08-15
 Author: John R. Minter
 Maintainer: John R. Minter <jrminter@gmail.com>
 Description: Miscellaneous functions in the spirit of DRY...
-License: GPL (>=2) | BSD
+License: GPL (>=2)
 LazyLoad: yes
 Depends: R (>= 2.15.3), boot
