--- a/jrm-r-pkgs/rLayerPAP/DESCRIPTION
+++ b/jrm-r-pkgs/rLayerPAP/DESCRIPTION
@@ -7,6 +7,8 @@ Description: Helpful wrapper functions for Win boxes to manage GMRFilm
 Version: 0.1.0
 Authors@R: c(person("John", "Minter", role = c("aut", "cre","ths"), email =
     "jrminter@gmail.com"))
+Author: John Minter <jrminter@gmail.com>
+Maintainer: John Minter <jrminter@gmail.com>
 Depends:
     R (>= 3.0.2)
 Suggests:
