--- a/jrm-r-pkgs/rLayerPAP/DESCRIPTION
+++ b/jrm-r-pkgs/rLayerPAP/DESCRIPTION
@@ -13,7 +13,7 @@ Depends:
     R (>= 3.0.2)
 Suggests:
     knitr
-License: Artistic-2.0
+License: MIT
 LazyData: true
 Collate:
     'parseCuNiKaPetPAP.R'
