added PdCu functions to rLayerPAP

--- a/jrm-r-pkgs/rLayerPAP/NAMESPACE
+++ b/jrm-r-pkgs/rLayerPAP/NAMESPACE
@@ -1,5 +1,9 @@
 export(ni.cu.rmsdev.contour.plot)
 export(pap.sim.ni.cu)
+export(pap.sim.pd.cu)
 export(papEta)
 export(parseCuNiKaPetPAP)
+export(parseCuPdLaPetPAP)
+export(pd.cu.rmsdev.contour.plot)
 export(write.gmrf.in.ni.cu)
+export(write.gmrf.in.pd.cu)
