major fixes in rLayerPap v. 0.1.5

--- a/jrm-r-pkgs/rLayerPAP/NAMESPACE
+++ b/jrm-r-pkgs/rLayerPAP/NAMESPACE
@@ -1,9 +1,11 @@
+export(make.gmrf.run.it)
 export(ni.cu.rmsdev.contour.plot)
 export(pap.sim.ni.cu)
 export(pap.sim.pd.cu)
 export(papEta)
-export(parseCuNiKaPetPAP)
-export(parseCuPdLaPetPAP)
+export(parse.ni.cu.gmrf.sg.out)
+export(parse.pd.cu.gmrf.sg.out)
 export(pd.cu.rmsdev.contour.plot)
 export(write.gmrf.in.ni.cu)
+export(write.gmrf.in.ni.th.cu)
 export(write.gmrf.in.pd.cu)
