--- a/jrm-r-pkgs/rLayerPAP/NAMESPACE
+++ b/jrm-r-pkgs/rLayerPAP/NAMESPACE
@@ -1,11 +1,12 @@
-export(make.gmrf.run.it)
+export(matchErrorPdCu)
 export(ni.cu.rmsdev.contour.plot)
-export(pap.sim.ni.cu)
-export(pap.sim.pd.cu)
 export(papEta)
-export(parse.ni.cu.gmrf.sg.out)
-export(parse.pd.cu.gmrf.sg.out)
+export(parseNiCuOut)
+export(parsePdCuOut)
 export(pd.cu.rmsdev.contour.plot)
-export(write.gmrf.in.ni.cu)
-export(write.gmrf.in.ni.th.cu)
-export(write.gmrf.in.pd.cu)
+export(simNiCuSG)
+export(simPdCuSG)
+export(writeInputNiCuSG)
+export(writeInputNiCuTh)
+export(writeInputPdCuSG)
+export(writeInputPdCuTh)
