v 0.1.7 shell execution more robust. Some renames

--- a/jrm-r-pkgs/rLayerPAP/NAMESPACE
+++ b/jrm-r-pkgs/rLayerPAP/NAMESPACE
@@ -1,9 +1,13 @@
+export(getOutputFile)
+export(makeRunIt)
+export(matchErrorNiCu)
 export(matchErrorPdCu)
 export(ni.cu.rmsdev.contour.plot)
 export(papEta)
 export(parseNiCuOut)
 export(parsePdCuOut)
 export(pd.cu.rmsdev.contour.plot)
+export(preClean)
 export(simNiCuSG)
 export(simPdCuSG)
 export(writeInputNiCuSG)
