v. 0.1.8 - have wrappers to gen SG import files for PdCu and NiCu

--- a/jrm-r-pkgs/rLayerPAP/NAMESPACE
+++ b/jrm-r-pkgs/rLayerPAP/NAMESPACE
@@ -14,3 +14,5 @@ export(writeInputNiCuSG)
 export(writeInputNiCuTh)
 export(writeInputPdCuSG)
 export(writeInputPdCuTh)
+export(writeNiCuImportSG)
+export(writePdCuImportSG)
