added functions to process K. Schell CuOx on Cu model

--- a/jrm-r-pkgs/rLayerPAP/NAMESPACE
+++ b/jrm-r-pkgs/rLayerPAP/NAMESPACE
@@ -4,12 +4,14 @@ export(matchErrorNiCu)
 export(matchErrorPdCu)
 export(ni.cu.rmsdev.contour.plot)
 export(papEta)
+export(parseCuOxOut)
 export(parseNiCuOut)
 export(parsePdCuOut)
 export(pd.cu.rmsdev.contour.plot)
 export(preClean)
 export(simNiCuSG)
 export(simPdCuSG)
+export(writeInputCuOxCu.R)
 export(writeInputNiCuSG)
 export(writeInputNiCuTh)
 export(writeInputPdCuSG)
