don't track certain msa files

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ dm-plugins/JRM-plugin/*.gtk
 dtsa2/index.md
 dtsa2/index.html
 
+# some msa files I generate on the fly and don't want to track...
+dtsa2/msa/Cu-15-Std.msa
+dtsa2/msa/Cu-15-Unk.msa
+
 .Rproj.user
 .Rhistory
 
