--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ jrm-r-pkgs/tikzDevice/src/tikzDevice.o
 
 # Rmd
 Rmd/Rickert-caret-demo/Rickert-caret-demo_files/*
+Rmd/Rickert-caret-demo/Rickert-caret-demo.html
