test metadata from SIS files in test suite dir

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ images/map/tile/*.tif
 images/map/tile/TileConfiguration.txt
 images/map/exemplar-3x2-map.png
 images/George.txt
+# don't track written ini files
+images/suite/*.ini
 
 # py3
 py3/dna/features.csv
