--- a/penepma/Ir-250-on-Ag-150-on-Silica.in
+++ b/penepma/Ir-250-on-Ag-150-on-Silica.in
@@ -1,25 +1,25 @@
-TITLE  Bi-layer Film On Bulk X-ray Production Model
+TITLE  Thin Film On Substrate X-ray Production Model
        .
        >>>>>>>> Electron beam definition.
-SENERG 30e3                      [Energy of the electron beam, in eV]
+SENERG 3.0E+04                   [Energy of the electron beam, in eV]
 SPOSIT 0 0 1                     [Coordinates of the electron source]
 SDIREC 180 0              [Direction angles of the beam axis, in deg]
 SAPERT 0                                      [Beam aperture, in deg]
        .
        >>>>>>>> Material data and simulation parameters.
                 Up to 10 materials; 2 lines for each material.
-MFNAME Ir.MAT                         [Material file, up to 20 chars]
-MSIMPA 1.0E+3 1.0E+3 1E+3 0 0 0 -1E+2       [EABS(1:3),C1,C2,WCC,WCR]
-MFNAME Al.mat                         [Material file, up to 20 chars]
-MSIMPA 1.0E+3 1.0E+3 1E+3 0 0 0 -1E+2       [EABS(1:3),C1,C2,WCC,WCR]
-MFNAME SiO2.mat                       [Material file, up to 20 chars]
-MSIMPA 1.0E+3 1.0E+3 1E+3 0 0 0 -1E+2       [EABS(1:3),C1,C2,WCC,WCR]
+MFNAME Ir.mat                           [Material file, up to 20 chars]
+MSIMPA 9.0E+1 9.0E+1 1E+3 0 0 1E+3 1E+3       [EABS(1:3),C1,C2,WCC,WCR]
+MFNAME Ag.mat                           [Material file, up to 20 chars]
+MSIMPA 9.0E+1 9.0E+1 1E+3 0 0 1E+3 1E+3       [EABS(1:3),C1,C2,WCC,WCR]
+MFNAME SiO2.mat                         [Material file, up to 20 chars]
+MSIMPA 9.0E+1 9.0E+1 1E+3 0 0 1E+3 1E+3       [EABS(1:3),C1,C2,WCC,WCR]
        .
        >>>>>>>> Geometry of the sample.
-GEOMFN trilayer_100_100nm_Bulk.geo      [Geometry definition file, 20 chars]
-DSMAX  1 1.0e-7                         [IB, Maximum step length (cm) in body IB]
-DSMAX  2 1.5e-7                         [IB, Maximum step length (cm) in body IB]
-DSMAX  3 1.5e-7                         [IB, Maximum step length (cm) in body IB]
+GEOMFN tl_250_150nm.geo     [Geometry definition file, 20 chars]
+DSMAX  1 1.0e-7             [IB, Maximum step length (cm) in body IB]
+DSMAX  2 1.5e-7             [IB, Maximum step length (cm) in body IB]
+DSMAX  3 1.5e-7             [IB, Maximum step length (cm) in body IB]
        .
        >>>>>>>> Interaction forcing.
 IFORCE 1 1 4 -10    0.1 1.0           [KB,KPAR,ICOL,FORCER,WLOW,WHIG]
@@ -32,7 +32,7 @@ IFORCE 2 2 2 -10   1e-4 1.0           [KB,KPAR,ICOL,FORCER,WLOW,WHIG]
 IFORCE 2 2 3 -10   1e-4 1.0           [KB,KPAR,ICOL,FORCER,WLOW,WHIG]
        .
        >>>>>>>> Emerging particles. Energy and angular distributions.
-NBE    0   4e3 250                [E-interval and no. of energy bins]
+NBE    0 3.0E+04 4096             [E-interval and no. of energy bins]
 NBTH   45                     [No. of bins for the polar angle THETA]
 NBPH   30                   [No. of bins for the azimuthal angle PHI]
        .
@@ -40,13 +40,13 @@ NBPH   30                   [No. of bins for the azimuthal angle PHI]
                 IPSF=0, do not create a phase-space file.
                 IPSF=1, creates a phase-space file.
        .
-PDANGL 45.0 55.0 0.0 360.0 0           [Angular window, in deg, IPSF]
-PDENER 0   30e3 4096                 [Energy window, no. of channels]
+PDANGL 50.0 60.0 0.0 360.0 0             [Angular window, in deg, IPSF]
+PDENER 0 3.0E+04 4096                  [Energy window, no. of channels]
        .
        >>>>>>>> Job properties
 RESUME dump1.dat               [Resume from this dump file, 20 chars]
 DUMPTO dump1.dat                  [Generate this dump file, 20 chars]
 DUMPP  120                                   [Dumping period, in sec]
        .
-NSIMSH 2.0e+03                  [Desired number of simulated showers]
+NSIMSH 2.0e+07                  [Desired number of simulated showers]
 TIME   3600                        [Allotted simulation time, in sec]
