--- a/ImageJ/ij-1-plug-ins-src/SingleParticleDetector/Legacy Single_Particle_Detector/build.xml
+++ b/ImageJ/ij-1-plug-ins-src/SingleParticleDetector/Legacy Single_Particle_Detector/build.xml
@@ -1,6 +1,6 @@
-<project name="Shading_Correct" default="" basedir=".">
+<project name="Single_Particle_Detector" default="" basedir=".">
 	<description>
-		Shading_Correct build file
+		Single_Particle_Detector build file
 	</description>
 	<property name="src" location="src" />
 	<property name="build" location="bin" />
@@ -16,13 +16,13 @@
 	</target>
 	
 	<target name="compress" depends="" description="generate the distribution">
-		<jar jarfile="Shading_Correct.jar">
+		<jar jarfile="Single_Particle_Detector.jar">
 			<fileset dir="." includes="plugins.config" />
 			<fileset dir="${build}" includes="**/*.*" />
 			<manifest>
 				<attribute name="Built-By" value="${user.name}"/>
 			</manifest>
 		</jar>
-    <copy file="Shading_Correct.jar" toDir="${pluginsDir}" />
+    <copy file="Single_Particle_Detector.jar" toDir="${pluginsDir}" />
    </target>
 </project>
